# First-OpenGL-project

./: .gitignore  CMakeLists.txt
include/UI/: UIElements.h
include/glad/: glad.h
include/openglBasics/: EBO.h  VAO.h  VBO.h  shaderclass.h
shaders/: default.frag  default.vert
src/: EBO.cpp  VAO.cpp  VBO.cpp  glad.c  main.cpp  shaderclass.cpp
src/UI/: UIElements.cpp
